Add update profile method
